secondfile/objects/Customer_Quote__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Customer Quotes</relationshipLabel>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Customer Quotes</relationshipLabel>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Customer Quotes</relationshipLabel>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related End Customer</label>
        <referenceTo>Related_End_Customer__c</referenceTo>
        <relationshipLabel>Customer Quotes</relationshipLabel>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Management</label>
        <referenceTo>CustomerSite__c</referenceTo>
        <relationshipLabel>Customer Quotes</relationshipLabel>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sites__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sites</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Customer Quotes</relationshipLabel>
        <relationshipName>Customer_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Customer Quote</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customer Quote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Quotes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>